welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:7: error: type mismatch;
 found   : Double
 required: Int
  return b
         ^